# kv-cache-compression-benchmark-

./: .env.example  .gitignore  README.md  pyproject.toml
baselines/kivi/: __init__.py
baselines/qjl/: __init__.py
baselines/rocketkv/: __init__.py
compressors/: __init__.py  base.py  identity.py  kivi.py  qjl.py  registry.py  rocketkv.py  turboquant.py
configs/: eval.yaml
data/: __init__.py  loader.py
docs/: SYSTEM_DESIGN.md
eval/: __init__.py  memory.py  perplexity.py  runner.py  throughput.py
framework/: __init__.py  config.py  device.py  kv_cache.py  model.py
reporting/: __init__.py  reporter.py
scripts/: run_baseline.py  run_eval.py  run_turboquant_sweep.py  setup_path.py  verify_phase1_model.py
tests/: test_compressor.py  test_dataset_loader.py  test_eval_runner.py  test_phase1_model.py
