[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kv-cache-compression-benchmark"
version = "0.1.0"
description = "Generic KV-cache compression research framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
include = [
  "framework*",
  "compressors*",
  "eval*",
  "data*",
  "reporting*",
  "quantizers*",
  "baselines*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
